[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "topsis-cli"
version = "0.1.0"
description = "A command-line tool for TOPSIS-based multi-criteria decision making."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
  { name="Abhiraj"}
]
dependencies = [
  "pandas",
  "numpy",
  "chardet"
]

[project.scripts]
topsis-cli = "topsis:main"

[project.urls]
Homepage = "https://github.com/abhirajsinghjhajj/Topsis_Abhiraj_Singh_Jhajj_102217094"
